--- a/style.css
+++ b/style.css
@@ -205,6 +205,10 @@ img#emoji{
     .popup-message{
         width: 60vw;
     }
+
+    div#cross{
+        margin-left:2rem;
+    }
 }
 
 
@@ -245,15 +249,15 @@ img#emoji{
     }
 
     div#aalu{
-        font-size: 5rem;
-      margin-top:-3rem;
-        margin-left: 2rem;
+        font-size: 8rem;
+      margin-top:-5rem;
+        margin-left: 0.5rem;
         
     }
 
     div#cross{
-        font-size: 4rem;
-        margin-top: -2.1rem;
+        font-size: 5rem;
+        margin-top: -3rem;
     }
 
     .popup-message{
@@ -272,8 +276,8 @@ img#emoji{
     }
 
     div#aalu{
-        font-size: 5rem;
-      margin-top:-3rem;
+        font-size: 6rem;
+      margin-top:-5rem;
         margin-left: 0rem;
         
     }
@@ -297,6 +301,8 @@ img#emoji{
 }
 
 
+
+
 @media screen and (max-width:250px) {
     div#board button{
         width: 22vw;
@@ -306,7 +312,7 @@ img#emoji{
     }
 
     div#aalu{
-        font-size: 50px;
+        font-size: 70px;
       margin-top:-3rem;
         margin-left: 0rem;
         
@@ -314,7 +320,7 @@ img#emoji{
 
     div#cross{
         font-size: 50px;
-        margin-top:-3rem;
+        margin-top:-2rem;
     }
 
     .popup-message{
